fix for ie: flexbox overflow bug

--- a/public/css/ftc.css
+++ b/public/css/ftc.css
@@ -564,6 +564,17 @@ footer {
 			padding: 0 0.25em;
 		}
 
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+     /* IE10+ CSS styles go here */
+     #detail-box.team {
+     	display: block;
+     	height: calc(100% - 4em);
+     }
+		#detail-box.team .detail-body {
+			height: calc(100% - 64px);
+		}
+}
+
 @media (max-width : 800px) 
 {
 	.nodivisions header .ftcXlrg {
